Update ReportAnalyzer.java (#39)